--- a/1_Introduction.Rmd
+++ b/1_Introduction.Rmd
@@ -14,7 +14,7 @@ Prior to 1966, the `r spp` resource off of the northern portion of the US west c
 
 ##Summary of Management History and Performance
 
-Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the US. With the implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, US territorial waters were extended to 200 miles from shore and primary responsibility for management of the groundfish stocks off Washington, Oregon, and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan for the West Coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted `r spp` stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978], the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia International North Pacific Fishery Commission (INPFC) area. To implement this strategy, the states of Oregon and Washington each established landing limits for `r spp`. Trawl trip limits of various forms remained in effect through `r Dat_end_mod1` (Table \ref{tab:Regs}).
+Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the US. With the implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, US territorial waters were extended to 200 nautical miles from shore and primary responsibility for management of the groundfish stocks off Washington, Oregon, and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan for the West Coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted `r spp` stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978], the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia International North Pacific Fishery Commission (INPFC) area. To implement this strategy, the states of Oregon and Washington each established landing limits for `r spp`. Trawl trip limits of various forms remained in effect through `r Dat_end_mod1` (Table \ref{tab:Regs}).
 
 The landings of `r spp` have been historically governed by harvest guidelines and trip limits, while recently management has imposed total catch harvest limits in the form of overfishing limits (OFLs), acceptable biological catches (ABCs), and annual catch limits (ACLs). A trawl rationalization program, consisting of an individual fishing quota (IFQ) catch shares system was implemented in 2011 for the limited entry trawl fleet targeting non-whiting groundfish, including `r spp` and the trawl fleet targeting and delivering whiting to shore-based processors. The limited entry at-sea trawl sectors (motherships and catch-processors) that target whiting and process at-sea are managed in a system of harvest cooperatives.
 
