--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -75,7 +75,7 @@ Research length and ages were provided by WDFW.  However, the information regard
 
 **Washington**
 
-Historical commercial fishery landings of `r spp` in Washington for the years 1908-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and, hence, the historical catches for Washington differ from those used in the 2011 assessment.  WDFW also provided catches for 1981-2016 period to include re-distribution of the "URCK" landings in the PacFIN database.  These data are currently not available from PacFIN. 
+Historical commercial fishery landings of `r spp` in Washington for the years 1908-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a historical catch reconstruction provided by Washington state and, hence, the historical catches for Washington differ from those used in the 2011 assessment.  WDFW also provided catches for 1981-2016 period to include re-distribution of the "URCK" landings in the PacFIN database.  These data are currently not available from PacFIN. 
 
 **Oregon**
 
@@ -83,7 +83,7 @@ Historical commercial fishery landings of `r spp` in Oregon for the years 1892-1
 
 **California**
 
-Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey data system, also known as CALCOM Database (128.114.3.187) for the years 1916-1980. A description of the historical reconstruction methods can be found in Ralston et al. [-@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN (retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey data system, also known as CALCOM Database (128.114.3.187) for the years 1916-1980. The catches received included revisions in the catch history from 1948-1960 based on fish that were landed in northern California that were not included in the original reconstruction.  A description of the historical reconstruction methods can be found in Ralston et al. [-@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN (retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
 
 **At-Sea Hake Fishery**
 
@@ -101,7 +101,7 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
  
 
 ###Fishery Length and Age Data
-Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN on May 4, 2017.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data from California for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level and then aggregated to the state level.  The input sample sizes were calculated via the Stewart method (Ian Stewart, personal communication, IPHC):
+Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN on May 4, 2017.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data from California for `r spp` available within PacFIN or CALCOM databases.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level and then aggregated to the state level.  The input sample sizes were calculated via the Stewart method (Ian Stewart, personal communication, IPHC):
 
 \begin{centering}
 
@@ -111,16 +111,17 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 \end{centering}
 
-The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear trends of a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
+The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear patterns showing a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
 
 ###Fishery Data Not Included in the Base Model
+Several dataset were available from the fishery were explored but not used in the final assessment.
 
 ####Historical Commercial Catch-Per-Unit Effort
 
-Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  Unfortunately, the original data and the analysis methods used to create this CPUE have been lost to time precluding a re-analysis of these data.  Due to the inability to examine the assumptions made during the original analysis or the data used this time-series has been excluded from the base model.  Information regarding the fishery CPUE are available in Appendix \ref{appendix-c.-description-of-cpue-and-triennial-data}.
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas from Gunderson [-@gunderson_population_1977].  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  Unfortunately, the original data and the analysis methods used to create this CPUE series have been lost to time precluding a re-analysis of these data.  Due to the inability to examine the assumptions made during the original analysis or the data used this time-series has been excluded from the base model.  These data were included in the previous assessment but were deamed not influential in the model estimates.  Information regarding the fishery CPUE are available in Appendix \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 ####Oregon Special Projects Length and Age Data
-Oregon special project data were provided by ODFW.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data were collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.
+Oregon special project data were provided by ODFW.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data were collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.  This was the first time these data were explored for consideration in the assessment.
 
 
 
@@ -129,10 +130,10 @@ Oregon special project data were provided by ODFW.  These data represent samples
 
 ###Natural Mortality
 
-Historic `r spp` ages determined using scales and surface reading methods of otoliths resulted in estimates of natural mortality ($M$) between 0.10 and 0.20 yr^-1^ with a longevity
-less than 30 years [@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059 yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life-history correlates (including Hoenig's method, Gunderson [-@gunderson_trade-off_1997]gonadosomatic index, and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
+Historical `r spp` ages determined using scales and surface reading methods of otoliths resulted in estimates of natural mortality ($M$) between 0.10 and 0.20 yr^-1^ with a longevity
+less than 30 years [@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059 yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life-history correlates (including Hoenig's method, Gunderson [-@gunderson_trade-off_1997] gonadosomatic index, and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
 
-Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the $M$ rate to other life-history parameters such as longevity, size, growth rate, and reproductive effort to provide a prior on $M$. In that same issue of *ICES Journal of Marine Science*, Then et al. [-@then_evaluating_2015]provided an updated data set of estimates of $M$ and related life-history parameters across a large number of fish species from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares estimator $M=4.899A^{-0.916}_{max}$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
+Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the $M$ rate to other life-history parameters such as longevity, size, growth rate, and reproductive effort to provide a prior on $M$. In that same issue of *ICES Journal of Marine Science*, Then et al. [-@then_evaluating_2015] provided an updated data set of estimates of $M$ and related life-history parameters across a large number of fish species from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares estimator $M=4.899A^{-0.916}_{max}$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
 
 \begin{centering}
 
@@ -140,7 +141,7 @@ $M=\frac{5.4}{A_{\text{max}}}$
 
 \end{centering}
 
-The above is also the median of the prior. The prior is defined as a lognormal distribution with mean $ln(\frac{5.4}{A_{\text{max}}})$ and SE = 0.438. Using a maximum age of 100, the point estimate and median of the prior is 0.054.  The maximum age was selected based on available age data from all West Coast data sources.  The oldest aged rockfish was 120 years, captured by the commercial fishery in 2007.  However, age data are subject to ageing error which could impact this estimate of longevity.  The selection of 100 years was based on the range of other ages available with multiple observations of fish between 90 and 102 years of age.      
+The above is also the median of the prior. The prior is defined as a lognormal distribution with mean $ln(\frac{5.4}{A_{\text{max}}})$ and SE = 0.438. Using a maximum age of 100, the point estimate and median of the prior is 0.054 yr^-1^.  The maximum age was selected based on available age data from all West Coast data sources.  The oldest aged rockfish was 120 years, captured by the commercial fishery in 2007.  However, age data are subject to ageing error which could impact this estimate of longevity.  The selection of 100 years was based on the range of other ages available with multiple observations of fish between 90 and 102 years of age.      
 
 
 ###Sex Ratio, Maturation, and Fecundity
